# article-ai

./: .gitignore  AGENTS.md  README.md  SConstruct  pyproject.toml
.github/workflows/: ci.yml
output/analysis/figure_crimson_ai_generated/: data_crimson_ai_generated.csv
output/analysis/figure_crimson_totals/: data_crimson_totals.csv
source/analysis/figure_crimson_ai_generated/: plot_crimson_ai_generated.py
source/analysis/figure_crimson_totals/: plot_crimson_totals.py
source/derived/crimson/: clean_crimson_articles.py  generate_preds_crimson_articles.py  migrate_crimson_prediction_ids.py
source/static/: clean_and_embed_articles.py  generate_ai_preds_crimson.py  generate_simulated_crimson_articles.py  scrape_crimson_articles.py
